--- a/.github/workflows/version.yml
+++ b/.github/workflows/version.yml
@@ -63,7 +63,7 @@ jobs:
         if: env.NEW_VERSION != ''
         run: |
           TIMESTAMP=$(date '+%d.%m.%Y %H:%M:%S')
-          CHANGELOG_FILE="CHANGELOG.md"
+          CHANGELOG_FILE="changelog.md"
           
           # Создаем changelog если его нет
           if [ ! -f "$CHANGELOG_FILE" ]; then
