--- a/.github/workflows/version.yml
+++ b/.github/workflows/version.yml
@@ -89,7 +89,7 @@ jobs:
         run: |
           git config user.name "GitHub Action"
           git config user.email "action@github.com"
-          git add ${{ env.NAME_VERSION_FILE }} version/version_log CHANGELOG.md
+          git add ${{ env.NAME_VERSION_FILE }} version/version_log changelog.md
           git commit -m "Bump version to ${{ env.NEW_VERSION }} and update changelog with all commits"
           git push https://x-access-token:${{ secrets.PAT_TOKEN }}@github.com/${{ github.repository }}.git HEAD:${{ github.ref }}
 
