--- a/.github/workflows/version.yml
+++ b/.github/workflows/version.yml
@@ -74,7 +74,7 @@ jobs:
         if: env.NEW_VERSION != ''
         run: |
           TIMESTAMP=$(date '+%d.%m.%Y %H:%M:%S')
-          CHANGELOG_FILE="CHANGELOG.md"
+          CHANGELOG_FILE="changelog.md"
           
           # Create changelog if it doesn't exist
           if [ ! -f "$CHANGELOG_FILE" ]; then
@@ -94,7 +94,7 @@ jobs:
         run: |
           git config user.name "GitHub Action"
           git config user.email "action@github.com"
-          git add ${{ env.NAME_VERSION_FILE }} version/version_log CHANGELOG.md .last_commit
+          git add ${{ env.NAME_VERSION_FILE }} version/version_log changelog.md .last_commit
           git commit -m "Bump version to ${{ env.NEW_VERSION }} and update changelog"
           git push https://x-access-token:${{ secrets.PAT_TOKEN }}@github.com/${{ github.repository }}.git HEAD:${{ github.ref }}
 
