Feature/test workflows (#49)
* Update ci_cd.yml

* Update ci_cd.yml

* Update sonar-analysis.yml

* Update sonar-analysis.yml

* Update ci_cd.yml

* Update sonar-analysis.yml

* Update sonar-project.properties

* Update sonar-project.properties

* Update sonar-project.properties

* Update sonar-project.properties

* Update sonar-project.properties

* Update sonar-project.properties

* Update sonar-project.properties

* Update version.yml

* Update version.yml

* Update version.yml

* Update version.yml

* Update version.yml

* Bump version to 0.1.0 and update changelog

* Update version.yml

* Bump version to 0.2.0 and update changelog

* Fix

* Create CHANGELOG.md

* Bump version to 0.3.0 and update changelog

* Update version.yml

* Bump version to 0.4.0 and update changelog

* Update version.yml

* Bump version to 0.5.0 and update changelog with all commits

* Update version.yml

* Update version.yml

* Bump version to 0.6.0 and update changelog with all commits

* Delete CHANGELOG.md

* Update test.txt

* Create changelog.md

* Update version.yml

* Update version.yml

* Bump version to 0.7.0 and update changelog with all commits

* Test

* Test2

* Bump version to 0.8.0 and update changelog with all commits

* Test1

* Test2

* Bump version to 0.9.0 and update changelog with all commits

* Update version.yml

* Update test.txt

* Bump version to 0.10.0 and update changelog with all commits

* Update test.txt

* Update version.yml

* Bump version to 0.11.0 and update changelog with all commits

* Update version.yml

* Bump version to 0.12.0 and update changelog

* Update version.yml

* Test1

* Update version.yml

* Bump version to 0.13.0 and update changelog

* Test1

* Test2

* Bump version to 0.14.0 and update changelog

---------

Co-authored-by: NI Corp. <74864374+NickNameYouTuber@users.noreply.github.com>
Co-authored-by: GitHub Action <action@github.com>

--- a/.github/workflows/version.yml
+++ b/.github/workflows/version.yml
@@ -1,4 +1,3 @@
-# .github/workflows/versioning.yml
 name: Versioning and Changelog
 
 on:
@@ -25,7 +24,6 @@ jobs:
         with:
           token: ${{ secrets.GITHUB_TOKEN }}
           fetch-depth: 0
-
 
       # Set up Python
       - name: Set up Python
@@ -56,19 +54,29 @@ jobs:
           VERSION=$(cat ${{ env.NAME_VERSION_FILE }})
           echo "NEW_VERSION=$VERSION" >> $GITHUB_ENV
 
-      # Get commit message
-      - name: Get commit message
+      # Get commit messages from previous commit until current HEAD
+      - name: Get commit messages
         id: commit
         run: |
-          COMMIT_MSG=$(git log -1 --pretty=%B)
-          echo "message=$COMMIT_MSG" >> $GITHUB_OUTPUT
+          if [ -f .last_commit ]; then
+            PREV_COMMIT=$(cat .last_commit)
+          else
+            # Если файл не найден, берем предыдущий коммит относительно HEAD
+            PREV_COMMIT=$(git rev-parse HEAD~1)
+          fi
+          COMMIT_MSG=$(git log ${PREV_COMMIT}..HEAD --pretty=format:"- %s")
+          echo "message<<EOF" >> $GITHUB_OUTPUT
+          echo "$COMMIT_MSG" >> $GITHUB_OUTPUT
+          echo "EOF" >> $GITHUB_OUTPUT
+          # Обновляем файл с последним коммитом для будущих запусков
+          git rev-parse HEAD > .last_commit
 
       # Update changelog
       - name: Update Changelog
         if: env.NEW_VERSION != ''
         run: |
           TIMESTAMP=$(date '+%d.%m.%Y %H:%M:%S')
-          CHANGELOG_FILE="CHANGELOG.md"
+          CHANGELOG_FILE="changelog.md"
           
           # Create changelog if it doesn't exist
           if [ ! -f "$CHANGELOG_FILE" ]; then
@@ -79,7 +87,7 @@ jobs:
           # Add new entry
           echo "## [${{ env.NEW_VERSION }}] - $TIMESTAMP" >> $CHANGELOG_FILE
           echo "" >> $CHANGELOG_FILE
-          echo "- ${{ steps.commit.outputs.message }}" >> $CHANGELOG_FILE
+          echo "${{ steps.commit.outputs.message }}" >> $CHANGELOG_FILE
           echo "" >> $CHANGELOG_FILE
 
       # Commit changes
@@ -88,8 +96,6 @@ jobs:
         run: |
           git config user.name "GitHub Action"
           git config user.email "action@github.com"
-          git add ${{ env.NAME_VERSION_FILE }} version/version_log CHANGELOG.md
+          git add ${{ env.NAME_VERSION_FILE }} version/version_log changelog.md .last_commit
           git commit -m "Bump version to ${{ env.NEW_VERSION }} and update changelog"
-
           git push https://x-access-token:${{ secrets.PAT_TOKEN }}@github.com/${{ github.repository }}.git HEAD:${{ github.ref }}
-          
