--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,22 +1,15 @@
 {
   "name": "frontend",
   "version": "1.0.0",
-  "main": "app.js",
+  "type": "module",
   "scripts": {
+    "build": "webpack",
     "test": "jest --verbose"
   },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "description": "",
   "devDependencies": {
     "jest": "^29.7.0",
-    "jest-environment-jsdom": "^29.7.0"
-  },
-  "jest": {
-    "testEnvironment": "jsdom",
-    "testMatch": [
-      "**/world-time-city.test.js"
-    ]
+    "jest-environment-jsdom": "^29.7.0",
+    "webpack": "^5.89.0",
+    "webpack-cli": "^5.1.4"
   }
 }
