--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -3,10 +3,11 @@ FROM node:alpine as builder
 
 WORKDIR /app
 
+# Copy package.json and install dependencies
 COPY package.json .
-COPY package-lock.json .  # If you have one
 RUN npm install
 
+# Copy source files and build
 COPY app.js .
 COPY app-logic.js .
 COPY webpack.config.js .
@@ -17,6 +18,7 @@ FROM nginx:alpine
 
 WORKDIR /usr/share/nginx/html
 
+# Copy built files from builder stage
 COPY --from=builder /app/dist/bundle.js /usr/share/nginx/html/
 COPY world-time-city-website.html /usr/share/nginx/html/index.html
 COPY nginx.conf /etc/nginx/nginx.conf
