--- a/frontend/nginx.conf
+++ b/frontend/nginx.conf
@@ -1,12 +1,19 @@
 events {}
 
 http {
+    # Define MIME types
+    types {
+        application/javascript js;
+    }
+
     server {
         listen 80;
+        server_name localhost;
 
         location / {
             root /usr/share/nginx/html;
             index index.html;
+            try_files $uri $uri/ /index.html;
         }
 
         location /api/v1/ {
@@ -15,6 +22,11 @@ http {
             proxy_set_header X-Real-IP $remote_addr;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
             proxy_set_header X-Forwarded-Proto $scheme;
+        }
+
+        error_page 500 502 503 504 /50x.html;
+        location = /50x.html {
+            root /usr/share/nginx/html;
         }
     }
 }
