--- a/frontend/nginx.conf
+++ b/frontend/nginx.conf
@@ -1,11 +1,10 @@
 events {}
 
 http {
-    # Define MIME types
     types {
         application/javascript js;
     }
-
+    access_log /var/log/nginx/access.log;
     server {
         listen 80;
         server_name localhost;
