--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -13,22 +13,26 @@ jobs:
         uses: actions/checkout@v3
 
       - name: Setup SSH key
+        uses: webfactory/ssh-agent@v0.7.0
+        with:
+          ssh-private-key: ${{ secrets.DEPLOY_KEY }}
+
+      - name: Add host key
         run: |
           mkdir -p ~/.ssh
-          echo "${{ secrets.DEPLOY_KEY }}" | tr -d '\r' > ~/.ssh/deploy_key
-          chmod 600 ~/.ssh/deploy_key
           ssh-keyscan -p 2222 37.252.17.138 >> ~/.ssh/known_hosts
+          chmod 644 ~/.ssh/known_hosts
 
       - name: Copy project files to server
         run: |
-          rsync -avz -e "ssh -p 2222 -i ~/.ssh/deploy_key" \
+          rsync -avz -e "ssh -p 2222" \
             --exclude='.git' --exclude='.github' --exclude='node_modules' \
             ./ nick@37.252.17.138:/home/nick/project/
         shell: bash
 
       - name: Deploy via SSH
         run: |
-          ssh -p 2222 -i ~/.ssh/deploy_key nick@37.252.17.138 << 'EOF'
+          ssh -p 2222 nick@37.252.17.138 << 'EOF'
             cd /home/nick/project
             docker compose pull
             docker compose up -d --build
