--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -12,36 +12,47 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v3
 
-      - name: Install SSH key
-        uses: shimataro/ssh-key-action@v2
+      # Step 1: Make a test SSH connection with detailed debugging
+      - name: Test SSH Connection
+        uses: appleboy/ssh-action@master
         with:
+          host: 37.252.17.138
+          username: nick
           key: ${{ secrets.DEPLOY_KEY }}
-          known_hosts: 'just-a-placeholder-so-we-dont-get-errors'
-          config: |
-            Host deployment-server
-              HostName 37.252.17.138
-              User nick
-              Port 2222
-              StrictHostKeyChecking no
+          port: 2222
+          script: |
+            echo "Connection successful"
+            pwd
+            whoami
 
-      - name: Debug connection
-        run: |
-          echo "Testing connection to server..."
-          ssh -v deployment-server "echo Connection successful"
-        continue-on-error: true
+      # Step 2: Copy files using scp-action
+      - name: Copy files via SCP
+        uses: appleboy/scp-action@master
+        with:
+          host: 37.252.17.138
+          username: nick
+          key: ${{ secrets.DEPLOY_KEY }}
+          port: 2222
+          source: "./"
+          target: "/home/nick/project/"
+          rm: false
+          strip_components: 0
+          overwrite: true
+          timeout: 240s
+          exclude: |
+            .git/**
+            .github/**
+            node_modules/**
 
-      - name: Copy project files to server
-        run: |
-          rsync -avz \
-            --exclude='.git' --exclude='.github' --exclude='node_modules' \
-            ./ deployment-server:/home/nick/project/
-        shell: bash
-
-      - name: Deploy via SSH
-        run: |
-          ssh deployment-server << 'EOF'
+      # Step 3: Run Docker Compose commands
+      - name: Deploy with Docker Compose
+        uses: appleboy/ssh-action@master
+        with:
+          host: 37.252.17.138
+          username: nick
+          key: ${{ secrets.DEPLOY_KEY }}
+          port: 2222
+          script: |
             cd /home/nick/project
             docker compose pull
             docker compose up -d --build
-          EOF
-        shell: bash
