--- a/.github/workflows/ci_cd.yml
+++ b/.github/workflows/ci_cd.yml
@@ -23,19 +23,10 @@ jobs:
         run: npm install
         working-directory: ./frontend
 
-      # Запускаем npm test с выводом отчёта в JSON
+      # Запускаем Jest с выводом отчёта в JSON
       - name: Run Jest tests
         id: frontend-tests
-        run: |
-          # Check if babel.config.js exists and fix it if needed
-          if [ -f babel.config.js ]; then
-            # Check if it uses export default
-            if grep -q "export default" babel.config.js; then
-              # Convert to CommonJS syntax
-              sed -i 's/export default/module.exports =/' babel.config.js
-            fi
-          fi
-          npm test -- --json --outputFile=jest-results.json --verbose
+        run: npx jest --json --outputFile=jest-results.json --verbose
         working-directory: ./frontend
         continue-on-error: true
 
@@ -168,39 +159,3 @@ jobs:
           if [ "${{ needs.test-and-notify.outputs.test_status }}" != "success" ]; then
             exit 1
           fi
-
-  docker-push:
-    needs: test-and-notify
-    permissions:
-      contents: read
-      packages: write
-      id-token: write
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v4
-
-      - name: Login to Docker Hub
-        uses: docker/login-action@v3
-        with:
-          username: ${{ secrets.DOCKER_HUB_USERNAME }}
-          password: ${{ secrets.DOCKER_HUB_TOKEN }}
-
-      - name: Build and push backend
-        uses: docker/build-push-action@v5
-        with:
-          context: ./backend
-          file: ./backend/Dockerfile
-          tags: |
-            ${{ secrets.DOCKER_HUB_USERNAME }}/messenger-backend:new
-            ${{ secrets.DOCKER_HUB_USERNAME }}/messenger-backend:latest
-          push: true
-
-      - name: Build and push frontend
-        uses: docker/build-push-action@v5
-        with:
-          context: ./frontend
-          file: ./frontend/Dockerfile
-          tags: |
-            ${{ secrets.DOCKER_HUB_USERNAME }}/messenger-frontend:new
-            ${{ secrets.DOCKER_HUB_USERNAME }}/messenger-frontend:latest
-          push: true
