--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,4 +1,4 @@
-name: Deploy to Minikube
+name: Deploy to Kubernetes via SSH
 
 on:
   push:
@@ -12,39 +12,41 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v3
 
-      - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v2
-
-      - name: Build Docker images
+      - name: Setup SSH connection
         run: |
-          docker build -t project-frontend:latest ./frontend
-          docker build -t project-backend:latest ./backend
+          mkdir -p ~/.ssh
+          echo "${{ secrets.DEPLOY_KEY }}" | tr -d '\r' > ~/.ssh/deploy_key
+          chmod 600 ~/.ssh/deploy_key
+          ssh-keyscan -p 2222 37.252.17.138 >> ~/.ssh/known_hosts
 
-      - name: Install Minikube and dependencies
+      - name: Sync project files
         run: |
-          sudo apt-get update -qq
-          sudo apt-get install -qq -y conntrack
-          curl -LO https://storage.googleapis.com/minikube/releases/latest/minikube-linux-amd64
-          sudo install minikube-linux-amd64 /usr/local/bin/minikube
-          minikube config set driver docker
-          minikube start --driver=docker
-          minikube addons enable ingress
+          rsync -avz -e "ssh -p 2222 -i ~/.ssh/deploy_key" \
+            --exclude='.git' --exclude='.github' --exclude='node_modules' \
+            ./ nick@37.252.17.138:/home/nick/project/
 
-      - name: Load images into Minikube
+      - name: Build and deploy on remote
         run: |
-          minikube image load project-frontend:latest
-          minikube image load project-backend:latest
-
-      - name: Apply Kubernetes configuration
-        run: |
-          kubectl apply -f kubernetes-deployment.yaml
-          kubectl rollout restart deployment/frontend
-          kubectl rollout restart deployment/backend
-
-      - name: Verify deployment
-        run: |
-          kubectl get pods -w &
-          kubectl get services
-          minikube service list
-          kubectl rollout status deployment/frontend
-          kubectl rollout status deployment/backend
+          ssh -p 2222 -i ~/.ssh/deploy_key nick@37.252.17.138 << 'EOF'
+            set -ex
+            cd /home/nick/project
+            
+            # Сборка Docker образов
+            docker build -t project-frontend:latest ./frontend
+            docker build -t project-backend:latest ./backend
+            
+            # Загрузка образов в Minikube
+            minikube image load project-frontend:latest
+            minikube image load project-backend:latest
+            
+            # Применение Kubernetes конфигурации
+            kubectl apply -f kubernetes-deployment.yaml
+            
+            # Рестарт деплоев для обновления
+            kubectl rollout restart deployment/frontend
+            kubectl rollout restart deployment/backend
+            
+            # Ожидание завершения
+            kubectl rollout status deployment/frontend --timeout=3m
+            kubectl rollout status deployment/backend --timeout=3m
+          EOF
