--- a/kubernetes-deployment.yaml
+++ b/kubernetes-deployment.yaml
@@ -5,10 +5,7 @@ metadata:
 spec:
   replicas: 1
   strategy:
-    type: RollingUpdate
-    rollingUpdate:
-      maxUnavailable: 0
-      maxSurge: 1
+    type: Recreate
   selector:
     matchLabels:
       app: backend
@@ -20,22 +17,10 @@ spec:
       containers:
       - name: backend
         image: project-backend:latest
-        imagePullPolicy: Always
+        imagePullPolicy: Never
         ports:
         - containerPort: 8000
-        readinessProbe:
-          httpGet:
-            path: /health
-            port: 8000
-          initialDelaySeconds: 20
-          periodSeconds: 10
-          timeoutSeconds: 5
-        livenessProbe:
-          httpGet:
-            path: /health
-            port: 8000
-          initialDelaySeconds: 30
-          periodSeconds: 15
+
 ---
 apiVersion: v1
 kind: Service
@@ -48,6 +33,7 @@ spec:
     - protocol: TCP
       port: 8000
       targetPort: 8000
+
 ---
 apiVersion: apps/v1
 kind: Deployment
@@ -56,10 +42,7 @@ metadata:
 spec:
   replicas: 1
   strategy:
-    type: RollingUpdate
-    rollingUpdate:
-      maxUnavailable: 0
-      maxSurge: 1
+    type: Recreate
   selector:
     matchLabels:
       app: frontend
@@ -71,22 +54,10 @@ spec:
       containers:
       - name: frontend
         image: project-frontend:latest
-        imagePullPolicy: Always
+        imagePullPolicy: Never
         ports:
         - containerPort: 80
-        readinessProbe:
-          httpGet:
-            path: /
-            port: 80
-          initialDelaySeconds: 20
-          periodSeconds: 10
-          timeoutSeconds: 5
-        livenessProbe:
-          httpGet:
-            path: /
-            port: 80
-          initialDelaySeconds: 30
-          periodSeconds: 15
+
 ---
 apiVersion: v1
 kind: Service
