--- a/.github/workflows/ci_cd.yml
+++ b/.github/workflows/ci_cd.yml
@@ -191,7 +191,7 @@ jobs:
           context: ./backend
           file: ./backend/Dockerfile
           tags: |
-            ${{ secrets.DOCKER_HUB_USERNAME }}/messenger-backend:${{ needs.test-and-notify.outputs.version }}
+            ${{ secrets.DOCKER_HUB_USERNAME }}/messenger-backend:v${{ needs.test-and-notify.outputs.version }}
             ${{ secrets.DOCKER_HUB_USERNAME }}/messenger-backend:new
             ${{ secrets.DOCKER_HUB_USERNAME }}/messenger-backend:latest
           push: true
@@ -202,7 +202,7 @@ jobs:
           context: ./frontend
           file: ./frontend/Dockerfile
           tags: |
-            ${{ secrets.DOCKER_HUB_USERNAME }}/messenger-frontend:${{ needs.test-and-notify.outputs.version }}
+            ${{ secrets.DOCKER_HUB_USERNAME }}/messenger-frontend:v${{ needs.test-and-notify.outputs.version }}
             ${{ secrets.DOCKER_HUB_USERNAME }}/messenger-frontend:new
             ${{ secrets.DOCKER_HUB_USERNAME }}/messenger-frontend:latest
           push: true
